[package]
name = "riichi-tools-rs"
version = "0.0.68"
authors = ["harphield <harphield@protonmail.com>"]
edition = "2018"
license = "MIT"
description = "Riichi Mahjong tools library, mostly for WASM"
homepage = "https://riichi.harphield.com/tools/"
repository = "https://github.com/harphield/riichi-tools-rs"
readme = "README.md"
keywords = ["riichi", "mahjong", "wasm"]
exclude = [
    ".travis.yml",
    ".github",
    ".gitignore",
]

[lib]
crate-type = ["lib"]

[dependencies]
enum-iterator = "0.6"
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = { version = "0.7" }
console_error_panic_hook = "0.1.6"
regex = "1.4.2"
lazy_static = "1.4.0"
rust-embed = { version = "5.9.0", optional = true }

[features]
default = ["fast_shanten"] # need this for intellij, might remove later?
# uses a better and faster shanten & ukeire algorithm, but makes the binary larger, because it uses lookup tables.
fast_shanten = ["rust-embed"]